--- a/pesuio_AS.ipynb
+++ b/pesuio_AS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6tmhsr79Lw+XAEVulkRFl",
+      "authorship_tag": "ABX9TyMtBUcJ+Q4BMG/g6omYITkU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,23 +206,30 @@
     {
       "cell_type": "code",
       "source": [
-        "n=[1,2,3,4,5,6,7,8,9,10]\n",
-        "print(n)"
+        "name1=input(\"Enter name1 :\" )\n",
+        "age1=int(input(\"Enter age1 :\"))\n",
+        "name2=input(\"Enter name2 :\")\n",
+        "age2=int(input(\"Enter age2 :\"))\n",
+        "print(name1,age1,name2,age2)"
       ],
       "metadata": {
         "id": "3xoFhLepnLff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f0c6a1c-58b1-46ae-bc87-4950842c3ad9"
+        "outputId": "37ad2a83-e25b-4e9c-82b9-c8bd2cebd459"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+            "Enter name1 :sara\n",
+            "Enter age1 :20\n",
+            "Enter name2 :john\n",
+            "Enter age2 :23\n",
+            "sara 20 john 23\n"
           ]
         }
       ]
@@ -230,25 +237,29 @@
     {
       "cell_type": "code",
       "source": [
-        "i=1\n",
-        "while i<=10:\n",
-        " i=i+1\n",
-        "print(i)"
+        "n=int(input(\"Enter number 1 :\"))\n",
+        "m=int(input(\"Enter number 2 :\"))\n",
+        "l= int(input(\"Enter number 3 :\"))\n",
+        "mean = (n+m+l)/3\n",
+        "print(mean)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "WikNxX5Wbs2P",
-        "outputId": "69c6b554-89b1-4d81-f739-8e106ace04d3"
+        "outputId": "b7f75aaa-d5ed-4a68-b0ee-dfb1e08257fd"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "11\n"
+            "Enter number 1 :10\n",
+            "Enter number 2 :20\n",
+            "Enter number 3 :30\n",
+            "20.0\n"
           ]
         }
       ]
@@ -256,33 +267,29 @@
     {
       "cell_type": "code",
       "source": [
-        "i=1\n",
-        "while i<10:\n",
-        "  i=i+1\n",
-        "  print(i)"
+        "l=int(input(\"Enter length of rectanglular box :\"))\n",
+        "b=int(input(\"Enter breadth of rectangular box :\"))\n",
+        "h=int(input(\"Enter height of rectangular box :\"))\n",
+        "volume= l*b*h\n",
+        "print(volume)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "r4zLWOikcl20",
-        "outputId": "6a3ad281-b1a1-45fa-9c57-2141df3f5afb"
+        "outputId": "806cbceb-9ca5-4f71-d984-6cbd8549027f"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n"
+            "Enter length of rectanglular box :5\n",
+            "Enter breadth of rectangular box :4\n",
+            "Enter height of rectangular box :6\n",
+            "120\n"
           ]
         }
       ]
@@ -290,39 +297,29 @@
     {
       "cell_type": "code",
       "source": [
-        "str=\"betty bought some butter but the butter was bitter, so betty bought some better butter\"\n",
-        "list=str.split(\" \")\n",
-        "d={}\n",
-        "for i in list:\n",
-        "  if i in d:\n",
-        "    d[i]=d[i]+1\n",
-        "  else:\n",
-        "    d[i]=1\n",
-        "    print(d)"
+        "n=int(input(\"Enter a number :\"))\n",
+        "sum=0\n",
+        "while n>0:\n",
+        "  sum=sum+n\n",
+        "  n=n-1\n",
+        "print(\"The sum of n natural numbers is :\",sum)\n",
+        ""
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y6YkWkiNevVg",
-        "outputId": "cd70128d-f5a1-4481-d9b4-caccd3275d53"
+        "outputId": "fca3d5fa-cee3-4e51-9473-d26d39771e71"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'betty': 1}\n",
-            "{'betty': 1, 'bought': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 1, 'but': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 1, 'but': 1, 'the': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 2, 'but': 1, 'the': 1, 'was': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 2, 'but': 1, 'the': 1, 'was': 1, 'bitter,': 1}\n",
-            "{'betty': 1, 'bought': 1, 'some': 1, 'butter': 2, 'but': 1, 'the': 1, 'was': 1, 'bitter,': 1, 'so': 1}\n",
-            "{'betty': 2, 'bought': 2, 'some': 2, 'butter': 2, 'but': 1, 'the': 1, 'was': 1, 'bitter,': 1, 'so': 1, 'better': 1}\n"
+            "Enter a number :20\n",
+            "The sum of n natural numbers is : 210\n"
           ]
         }
       ]
@@ -330,11 +327,15 @@
     {
       "cell_type": "code",
       "source": [
-        "i=1\n",
-        "print(i)\n",
-        "while i<=21:\n",
-        " i=i+2\n",
-        " print(i)\n",
+        "def factorial(x):\n",
+        " if x==1:\n",
+        "  return 1\n",
+        " else:\n",
+        "  return (x*factorial (x-1))\n",
+        "\n",
+        "n=10\n",
+        "result = factorial(n)\n",
+        "print(\"factorial of\",n,\":\",result)\n",
         "\n",
         "\n"
       ],
@@ -343,26 +344,76 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WCVx4x4HfRh5",
-        "outputId": "f902e51a-f220-4dfe-d949-f0303ca77652"
+        "outputId": "15b5c898-612f-4bd5-ac12-7b6952f64bd1"
       },
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "3\n",
-            "5\n",
-            "7\n",
-            "9\n",
-            "11\n",
-            "13\n",
-            "15\n",
-            "17\n",
-            "19\n",
-            "21\n",
-            "23\n"
+            "factorial of 10 : 3628800\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=[10,20,30,10,40,20,40,50,60,30]\n",
+        "d={}\n",
+        "for i in l:\n",
+        "  if i in d:\n",
+        "    d[i]=d[i]+1\n",
+        "  else:\n",
+        "    d[i]=1\n",
+        "print(d)"
+      ],
+      "metadata": {
+        "id": "x0YEYcVfgQo-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ec72dbd-5a6c-48d3-9de6-bb609a754e4f"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{10: 2, 20: 2, 30: 2, 40: 2, 50: 1, 60: 1}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=5\n",
+        "for i in range(0,n): #for rows\n",
+        "  for j in range(0,i+1): #for columns\n",
+        "   print(\"*\",end=\" \")\n",
+        "  print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ize6ulNtzqvS",
+        "outputId": "c980139b-92fc-44bc-a9b8-3cbc45583788"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* \n",
+            "* * \n",
+            "* * * \n",
+            "* * * * \n",
+            "* * * * * \n"
           ]
         }
       ]
@@ -371,7 +422,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "x0YEYcVfgQo-"
+        "id": "BjR8UMhF7Enw"
       },
       "execution_count": null,
       "outputs": []
